--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -592,7 +592,6 @@
     },
     {
       "files": [
-        "dev-itpro/TOC.md",
         "dev-itpro/index.md",
         "dev-itpro/**/TOC.md",
         "retail/dev-itpro/TOC.md",
@@ -633,6 +632,7 @@
     {
       "files": [
         "core/TOC.md",
+        "dev-itpro/TOC.md",
         "financials/TOC.md",
         "financials/**/TOC.md",
         "hr/TOC.md",
@@ -704,6 +704,7 @@
       ]
     }
   ],
+   "forceHandoff": true,
    "includeDependencies":false,
    "autoPush":true,
    "xliffVersion":"1.2",
