--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -676,7 +676,8 @@
       ]
     }
   ],
-   "forceHandoff": true,
+  "forceHandoff":true,
+  "autoHandbackNoChangeXliff":true,
    "includeDependencies":false,
    "autoPush":true,
    "xliffVersion":"1.2",
